...
                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="auth_screen_logo" translatesAutoresizingMaskIntoConstraints="NO" id="wSi-qv-A4s">
                                <rect key="frame" x="166.66666666666666" y="430.66666666666669" width="60" height="60"/>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qyE-or-YPt">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="2Z7-JS-Hsz"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
                                                </imageView>
                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="CellGradient" translatesAutoresizingMaskIntoConstraints="NO" id="9N7-jn-j8J">
                                                    <rect key="frame" x="16" y="148" width="361" height="30"/>
                                                </imageView>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Uu7-zZ-wfr" userLabel="Like Button">
                                                    <rect key="frame" x="333" y="4" width="44" height="44"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="like button">
                                                        <bool key="isElement" value="NO"/>
                                                    </accessibility>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="44" id="uvw-DK-Tza"/>
                                                        <constraint firstAttribute="width" constant="44" id="zNg-7u-2Tu"/>
                                                    </constraints>
...
                                <connections>
                                    <outlet property="delegate" destination="gWM-uW-y70" id="pZs-32-g6e"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1aZ-An-Ix0" userLabel="BackButton">
                                <rect key="frame" x="9" y="11" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="nav back button white"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="nav_back_button_white"/>
                                <connections>
                                    <action selector="didTapBackButton:" destination="gWM-uW-y70" eventType="touchUpInside" id="97t-Ow-lxb"/>
                                </connections>
                            </button>
...
