...
        tagLabel.font = UIFont.systemFont(ofSize: 13, weight: .light)
        tagLabel.textColor = UIColor(named: "YP_Gray")
        
        bioLabel.font = UIFont.systemFont(ofSize: 13, weight: .light)
        bioLabel.textColor = .white
        
        buttonView.accessibilityIdentifier = "logout button"
        buttonView.setImage(UIImage(named: "exit_button"), for: .normal)
        buttonView.addTarget(self, action: #selector(logoutTapped), for: .touchUpInside)
    }
    
    @objc private func logoutTapped() {
        presenter?.didTapLogout()
...
